--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       ullam deleniti voluptate quod, magnam modi ipsam pariatur ab fugit iure,
       nemo perspiciatis nesciunt aliquam error quas labore cumque eum? Labore
     </p>
+    <p>This is Another Paragraph in Index Page</p>
   </body>
 </html>
